<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#476E6A"
    tools:context=".activity.ActionsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="372dp"
        android:layout_height="491dp"
        android:layout_marginTop="16dp"

        android:background="#EAEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/small_padding">

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/str_title"
                android:inputType="text"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="@dimen/big_size"
                android:textStyle="bold"
                tools:text="Final Project 1" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="427dp"
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:hint="@string/str_description"
                android:inputType="textMultiLine"
                android:textSize="@dimen/medium_size"
                tools:text="@string/str_lorem" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/dateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:backgroundTint="#03A9F4"
        android:text="Date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/timeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timeBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/timeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#03A9F4"
        android:text="Time"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/remBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toEndOf="@+id/dateBtn" />

    <Button
        android:id="@+id/remBtn"
        android:layout_width="178dp"
        android:layout_height="62dp"
        android:backgroundTint="#3F51B5"
        android:text="Set Remaider"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/timeBtn"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/dateBtn"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.839" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3/3/2023"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dateBtn"
        app:layout_constraintEnd_toStartOf="@+id/timeText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dateBtn"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12:00"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/timeBtn"
        app:layout_constraintEnd_toEndOf="@+id/timeBtn"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="@+id/timeBtn"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>